overflow fix

--- a/src/app/component/DevfestHero/styles.module.scss
+++ b/src/app/component/DevfestHero/styles.module.scss
@@ -135,9 +135,9 @@
         margin-bottom: 28px;
         overflow: hidden;
 
-        @media only screen and (min-width: 250px) and (max-width: 480px) {
-          display: none;
-        }
+        // @media only screen and (min-width: 250px) and (max-width: 480px) {
+        //   display: none;
+        // }
       }
 
       .content {
